Ignore old my_gpaw

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,7 +8,7 @@
         "**/*.gpw": true,
         "*.out": true,
         "*.a": true,
-        "my_gpaw": false,
+        "my_gpaw": true,
         "**/TEMP_*": true,
         "**/__pycache__": true,
     },
